Config/yaml/daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: daemon
  name: daemon
  namespace: otobo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: daemon
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f otobo-base.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: daemon
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - command: ["/opt/otobo_install/entrypoint.sh"]
          args: ["daemon"]
          image: rotheross/otobo:rel-10_0_8
          name: daemon
          resources: {}
          securityContext:
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /opt/otobo
              name: opt-otobo
              subPath: otobo
      restartPolicy: Always
      volumes:
        - name: opt-otobo
          persistentVolumeClaim:
            claimName: opt-otobo
status: {}
