Config/yaml/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: otobo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f otobo-base.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - command: ["/opt/otobo_install/entrypoint.sh"]
          args: ["web"]
          image: rotheross/otobo:rel-10_0_16
          name: web
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /opt/otobo/Kernel
            - name: article
              mountPath: /opt/otobo/var/article
            - name: skins
              mountPath: /opt/otobo/var/httpd/htdocs/skins/
            - name: backups
              mountPath: /var/otobo/backups
            - name: addons
              mountPath: /opt/otobo/addons
            - name: dbupgrade
              mountPath: /opt/otobo/db_upgrade
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: otobo-config
        - name: article
          persistentVolumeClaim:
            claimName: otobo-article
        - name: skins
          persistentVolumeClaim:
            claimName: otobo-skins
        - name: backups
          persistentVolumeClaim:
            claimName: otobo-backups
        - name: addons
          persistentVolumeClaim:
            claimName: otobo-addons
        - name: dbupgrade
          persistentVolumeClaim:
            claimName: otobo-dbupgrade
status: {}
