Config/yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
  namespace: otobo
spec:
  ports:
   - name: "6379"
     port: 6379
     targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
