Config/yaml/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: otobo
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 5000
  selector:
    io.kompose.service: web
  type: LoadBalancer
status:
  loadBalancer: {}
